--- a/volunteer.html
+++ b/volunteer.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,16 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">自我介绍<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="hobby.html" id="navbar" target="_top" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               爱好
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="#">画画</a>
-              <a class="dropdown-item" href="#">弹琵琶</a>
-              <a class="dropdown-item" href="#">橡皮章</a>
+              <a class="dropdown-item" href="#paint" target="_top">画画</a>
+              <a class="dropdown-item" href="#pipa" target="_top">弹琵琶</a>
+              <a class="dropdown-item" href="#ruber" target="_top">橡皮章</a>
             </div>
           </li>
           <li class="nav-item">
