--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,14 +25,14 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="hobby.html" id="navbar" target="_top" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               爱好
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="#paint" target="_top">画画</a>
-              <a class="dropdown-item" href="#pipa">弹琵琶</a>
+              <a class="dropdown-item" href="paint.html" target="_top">画画</a>
+              <a class="dropdown-item" href="pipa.html">弹琵琶</a>
               <!--<div class="dropdown-divider"></div>-->
-              <a class="dropdown-item" href="#ruber">橡皮章</a>
+              <a class="dropdown-item" href="ruber.html">橡皮章</a>
             </div>
             <!--dropdown需要JS的bootstrap。JS的bootstrap需要放在body部分的最后面-->
           </li>
@@ -54,15 +54,26 @@
   </nav><br><br><br>
 
 
-  <h1 style="font-size:28px; background-color:rgba(255,255,0,0.25);">欢迎来到<br>Acai<br>的空间</h1>
-  <h2 align="center" style="color:navy;">Acai的自我介绍</h2>
-  <p>我叫蔡依珊。在北京市八一学校国际部就读高二。是一个简(直)简（来）单（直）单（去），不会化妆，（真的）胖胖的女生。
-    生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!
-    搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。<br>
-    照片,em,放错了<br>
-    <img src="照片\照片.jpg" height="320" width="320"><br>
-    照骗(微笑)<br>
-    <img src="照片\自拍.jpg" height="320" width="425"><br>
+  <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
+  <div class="media">
+    <div class="media-left media-middle">
+      <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
+      <p>照片,em,放错了<br>
+      <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
+      照骗(微笑)</p><br>
+    </div>
+    <div class="media-body">
+      <h2>Acai的自我介绍</h2>
+      <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
+        是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
+        可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）<br>
+        身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
+        生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
+        搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p><br>
+    </div>
+  </div>
+
+
     <!--<div id="目录">
       这里可以写<label for="">link section</label>作为link开始了的提示
       <a href="#hobby"><br>
@@ -71,8 +82,6 @@
       一定要加#这个键啊！不然就错了！-->
   </p>
   <hr />
-
-
 
 
   <h2 style="color:navy;">写在后面的话</h2>
