--- a/photo.html
+++ b/photo.html
@@ -24,13 +24,13 @@
             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="hobby.html" id="navbar" target="_top" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               爱好
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="#paint" target="_top">画画</a>
-              <a class="dropdown-item" href="#pipa">弹琵琶</a>
-              <a class="dropdown-item" href="#ruber">橡皮章</a>
+              <a class="dropdown-item" href="paint.html">画画</a>
+              <a class="dropdown-item" href="pipa.html">弹琵琶</a>
+              <a class="dropdown-item" href="ruber.html">橡皮章</a>
             </div>
           </li>
           <li class="nav-item">
@@ -50,8 +50,8 @@
   <br>
   <br>
 
-  <div id="photo">
-  <h2 align="center" style="color:navy;">记录生活——不到入门级摄影</h2>
+
+  <h2 align="center">记录生活——不到入门级摄影</h2>
    <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p><br>
      <h3 style="color:Dodgerblue;">-云-</h3>
       <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
@@ -67,6 +67,7 @@
       <img src="照片\云10.jpg" height="312" width="312"><br>
       <img src="照片\云11.jpg" height="312" width="416"><br>
       <img src="照片\云12.jpg" height="312" width="416"></p><br>
+
      <h3 style="color:Dodgerblue;">-花-</h3>
       <p>花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
       <img src="照片\花4.5.jpg" height="312" width="312"><br>
@@ -79,6 +80,7 @@
       <img src="照片\花7.jpg" height="312" width="416"><br>
       <img src="照片\花6.jpg" height="312" width="416"><br>
       <img src="照片\花8.jpg" height="312" width="416"></p><br>
+
      <h3 style="color:Dodgerblue;">-足球-</h3>
       <p>足球的照片是上学年拍的，自我感觉良好（赞），还没有很多拍动态人物的经验，继续加油！<br>
       <img src="照片\足1.jpg" height="312" width="416"><br>
@@ -87,6 +89,7 @@
       <img src="照片\足4.jpg" height="312" width="416"><br>
       <img src="照片\足5.jpg" height="312" width="416"><br>
       <img src="照片\足6.jpg" height="312" width="312"></p><br>
+
      <h3 style="color:Dodgerblue;">-故宫-</h3>
       <p>好久之前去的故宫啦，最喜欢第二张和第六张，有那种“一入宫门深似海”的感觉。<br>
       <img src="照片\故宫1.jpg" height="312" width="312"><br>
@@ -95,6 +98,7 @@
       <img src="照片\故宫5.jpg" height="312" width="312"><br>
       <img src="照片\故宫4.jpg" height="312" width="312"><br>
       <img src="照片\故宫6.jpg" height="416" width="312"></p><br>
+
      <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
       <p>是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。喜欢老街那种热闹又掩不住悲凉。<br>
       <img src="照片\成1.jpg" height="312" width="312"><br>
@@ -106,6 +110,7 @@
       <img src="照片\成6.jpg" height="312" width="416"><br>
       熊猫真的好赏脸.可爱！<br>
       <img src="照片\成7.jpg" height="312" width="416"></p><br>
+
      <h3 style="color:Dodgerblue;">-HK-</h3>
       <p>去香港还是因为考sat:)，但是考试并不能影响我的好心情，开心开心。<br>
       <img src="照片\香港1.jpg" height="312" width="416"><br>
@@ -118,6 +123,7 @@
       小白说夜景不是很好照，我赞同！照完了还得调啊调，光源太多了。<br>
       <img src="照片\香港8.jpg" height="312" width="416"><br>
       <img src="照片\香港9.jpg" height="416" width="312"></p><br>
+
      <h3 style="color:Dodgerblue;">-杂-</h3>
       <p>最后这部分就是我的杂图了，实名很杂~<br>
       20年春节蜗居在家，偶尔下雪看着贼开心！（还被恐吓说雪里面有病毒不能玩雪）<br>
@@ -143,8 +149,7 @@
       <img src="照片\杂15.jpg" height="312" width="312"><br>
       <img src="照片\杂16.jpg" height="312" width="312"><br>
    </p>
-  </div>
-  <hr />
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
