--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
   <div class="media">
     <div class="media-left media-middle">
-      <img src="照片\照片.jpg" class="media-object" height="320" width="320" class="img-rounded"><br>
+      <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
       <p>照片,em,放错了<br>
       <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
       照骗(微笑)</p><br>
