--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 
   <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
+  <div class="container">
   <div class="media">
     <div class="media-left media-middle">
       <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
@@ -72,6 +73,7 @@
         搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p><br>
     </div>
   </div>
+</div>
 
 
     <!--<div id="目录">
