--- a/paint.html
+++ b/paint.html
@@ -111,9 +111,10 @@
 
 
     <h2 align="center">小小动力——我的爱好</h2><br>
+    <div class="container">
       <div class="media">
-        <div class="media-left media-middle">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide mr-5" data-ride="carousel">
+            <!--margin right-numver-->
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -176,81 +177,80 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
+
+            <div class="media-body">
+              <h3 style="color:Dodgerblue;">画画</h3>
+              <medium style="color:Dodgerblue;"><i>素描</i></medium>
+              <p>Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
+              我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
+              时不时也会因为画不下去而羡慕旁边学习儿童画的小朋友，惆怅在黑白灰的世界；还曾一度埋怨因为素描，而丧失了想象力。当然大多数的时候，都因为取得小小的成就被老师夸奖而沾沾自喜。
+              acai在四年级学完了石膏还有人像，也许是因为学的太早，也许是因为年少不懂事，大多的人物在现在看来并不是那么有精神，考九级的时候画的还是呆呆青年。但想想四年级小孩，
+              也不能指望那时候的我画的多好（嘿嘿）。画了一堆老头子和一个老太太，老太太画的最好（沉思）。</p><br>
           </div>
+       </div>
+    </div>
+    <br><br>
+
+
+
+   <div class="container">
+      <div class="media">
         <div class="media-body">
-          <h3 style="color:Dodgerblue;">画画</h3>
-          <medium style="color:Dodgerblue;"><i>素描</i></medium>
-          <p>Acai在小时候就开始学画画了。没学过简笔画，没学过漫画，一开始就学的素描，因为素描是基础。素描的深浅叫调（diao四声）子。
-          我记得小学一年级那会跟着哥哥姐姐一起画正方体，画完老师就说调子画“死”了，还给我吓一跳，意思是线条画的太密，没有留出透气的空间，显得很沉闷。后来就慢慢学，
-          时不时也会因为画不下去而羡慕旁边学习儿童画的小朋友，惆怅在黑白灰的世界；还曾一度埋怨因为素描，而丧失了想象力。当然大多数的时候，都因为取得小小的成就被老师夸奖而沾沾自喜。
-          acai在四年级学完了石膏还有人像，也许是因为学的太早，也许是因为年少不懂事，大多的人物在现在看来并不是那么有精神，考九级的时候画的还是呆呆青年。但想想四年级小孩，
-          也不能指望那时候的我画的多好（嘿嘿）。画了一堆老头子和一个老太太，老太太画的最好（沉思）。</p><br>
+          <medium style="color:Dodgerblue;"><i>水粉</i></medium>
+          <p>后来大概在五年级，开始学的水粉，学了两年，脱离黑白灰的苦海！最擅长画景物，瓶瓶罐罐瓜果蔬菜什么的，考了个八级玩玩。但最喜欢画风景，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
+          喜欢水粉大概还有另一个原因。它给了我后悔的机会。水粉的颜料一笔一笔的画在画纸上，如果你不满意第一笔画的，可以等它干了，再画一笔新的；等不及他干，也可以加上新的一笔，
+          和旧的颜色一起混合出新的颜色。生活中总有很多后悔的事情，但现实中总是没有后悔药的。就比如，后悔小学三年级因为作文中一个字不会写传纸条，后悔初中没有在初一的时候加入乐团，
+          或者后悔一些冲动的举动，无谓的争吵和消耗时光。人们总是在经历过后，才体会到事情的不应该，而更加珍惜现在拥有的。</p>
+        </div>
+        <div class="media-right media-middle">
+          <img src="照片\水粉1.jpg" alt="水粉" height="320" width="425"><br>
+          <img src="照片\水粉2.jpg" alt="水粉" height="320" width="425"><br>
+          <img src="照片\水粉3.jpg" alt="水粉" height="320" width="425"><br>
+          <img src="照片\水粉4.jpg" alt="水粉" height="425" width="320"><br>
+          <img src="照片\水粉5.jpg" alt="水粉" height="425" width="320"><br>
+          <img src="照片\水粉6.jpg" alt="水粉" height="320" width="425"><br>
+          <img src="照片\水粉7.jpg" alt="雪山" height="320" width="425"><br>
+          <img src="照片\水粉和我？.jpg" alt="水粉和我？" height="259" width="460"><br>
+        </div>
       </div>
-    </div>
-    <br>
+   </div>
 
 
 
+  <div class="container">
+    <div class="media">
+      <div class="media-left">
+        <img src="照片\水彩1.jpg" alt="水彩" height="425" width="320"><br>
+        <img src="照片\水彩2.jpg" alt="水彩" height="425" width="320"><br>
+        <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
+        <img src="照片\橙子？.jpg" alt="橙子" width="425" height="320"><br>
+        <img src="照片\树？.jpg" alt="树" width="425" height="320"><br>
+        <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320"><br>
+        <img src="照片\辛普森墙绘.jpg" alt="辛普森墙绘" width="425" height="320"><br>
+        <img src="照片\戏剧墙绘.jpg" alt="戏剧墙绘" width="425" height="320"><br>
+        <img src="照片\板绘1.jpg" alt="电脑绘画" width="425" height="320"><br>
+        <img src="照片\板绘2.jpg" alt="电脑绘画" width="320" height="425"><br>
+        <img src="照片\板绘3.jpg" alt="电脑绘画" width="378" height="282"><br>
+        <img src="照片\国画.jpg" alt="白描" width="320" height="425"><br>
+        <img src="照片\手绘1.jpg" alt="女生和大公鸡" height="425" width="320"><br>
+        <img src="照片\手绘2.jpg" alt="小樱" height="425" width="320"><br>
+        <img src="照片\手绘3.jpg" alt="头像" height="320" width="425"><br>
+        <img src="照片\手绘4.jpg" alt="新春贺图" height="320" width="425"><br>
+      </div>
+      <div class="media-body">
+        <medium style="color:Dodgerblue;"><i>水彩+墙绘+板绘+手绘？？？</i></medium>
+          <p>小学毕业那会，就用美术特长生考去了十九中，顺理成章的进了美术社团（嘿嘿）。
+          在美术社团主要练习的还是素描和水粉，也画了墙绘，还尝试了一点点水彩。<br>
+          水彩可能是以点点失败而告终。那会是初一暑假，和同学，学姐还有老师去海淀区的一个大山里，算是集训？就用水彩画吧，画风景啊，飞机啊啥的。掌握不好水加多少，画的也一般。
+          后来回家后自己在家慢慢琢磨然后画，才好了那么一点点。<br>
+          在十九画井盖和画墙都是全新的尝试，同样的磨人却又有趣！画一块墙从清理墙面到留下自己的大名要花一天的时间。
+          清理墙面，铺底色，画主体，画整体，扣细节，最后签名，完成！画完了以后顶顶骄傲和自豪。高一的时候也回去和同学一起画墙来着！主题是中国戏剧，画了一个大美女。<br>
+          还学了一点电脑美术，画了一个皮影制作人和皮影对话的场景的作品，但是很丑所以不放了！（插叙请注意--）等到高中自己买了板子，开始有一些简单的练习。当宣传委员还被安排画海报：）<br>
 
-
-
-
-  <div class="media">
-    <div class="media-body">
-      <medium style="color:Dodgerblue;"><i>水粉</i></medium>
-      <p>后来大概在五年级，开始学的水粉，学了两年，脱离黑白灰的苦海！最擅长画景物，瓶瓶罐罐瓜果蔬菜什么的，考了个八级玩玩。但最喜欢画风景，能把景色用自己的理解和感受表现出来，不同心情下也有不同的作品。<br>
-      喜欢水粉大概还有另一个原因。它给了我后悔的机会。水粉的颜料一笔一笔的画在画纸上，如果你不满意第一笔画的，可以等它干了，再画一笔新的；等不及他干，也可以加上新的一笔，
-      和旧的颜色一起混合出新的颜色。生活中总有很多后悔的事情，但现实中总是没有后悔药的。就比如，后悔小学三年级因为作文中一个字不会写传纸条，后悔初中没有在初一的时候加入乐团，
-      或者后悔一些冲动的举动，无谓的争吵和消耗时光。人们总是在经历过后，才体会到事情的不应该，而更加珍惜现在拥有的。</p>
-    </div>
-    <div class="media-right media-middle">
-      <img src="照片\水粉1.jpg" alt="水粉" height="320" width="425"><br>
-      <img src="照片\水粉2.jpg" alt="水粉" height="320" width="425"><br>
-      <img src="照片\水粉3.jpg" alt="水粉" height="320" width="425"><br>
-      <img src="照片\水粉4.jpg" alt="水粉" height="425" width="320"><br>
-      <img src="照片\水粉5.jpg" alt="水粉" height="425" width="320"><br>
-      <img src="照片\水粉6.jpg" alt="水粉" height="320" width="425"><br>
-      <img src="照片\水粉7.jpg" alt="雪山" height="320" width="425"><br>
-      <img src="照片\水粉和我？.jpg" alt="水粉和我？" height="259" width="460"><br>
-    </div>
-  </div>
-  <br>
-
-
-
-
-  <div class="media">
-    <div class="media-left media-middle">
-      <img src="照片\水彩1.jpg" alt="水彩" height="425" width="320"><br>
-      <img src="照片\水彩2.jpg" alt="水彩" height="425" width="320"><br>
-      <img src="照片\橙子合照.jpg" alt="和同学的合影" width="320" height="425"><br>
-      <img src="照片\橙子？.jpg" alt="橙子" width="425" height="320"><br>
-      <img src="照片\树？.jpg" alt="树" width="425" height="320"><br>
-      <img src="照片\被偷拍.jpg" alt="画井盖" height="180" width="320"><br>
-      <img src="照片\辛普森墙绘.jpg" alt="辛普森墙绘" width="425" height="320"><br>
-      <img src="照片\戏剧墙绘.jpg" alt="戏剧墙绘" width="425" height="320"><br>
-      <img src="照片\板绘1.jpg" alt="电脑绘画" width="425" height="320"><br>
-      <img src="照片\板绘2.jpg" alt="电脑绘画" width="320" height="425"><br>
-      <img src="照片\板绘3.jpg" alt="电脑绘画" width="378" height="282"><br>
-      <img src="照片\国画.jpg" alt="白描" width="320" height="425"><br>
-      <img src="照片\手绘1.jpg" alt="女生和大公鸡" height="425" width="320"><br>
-      <img src="照片\手绘2.jpg" alt="小樱" height="425" width="320"><br>
-      <img src="照片\手绘3.jpg" alt="头像" height="320" width="425"><br>
-      <img src="照片\手绘4.jpg" alt="新春贺图" height="320" width="425"><br>
-    </div>
-    <div class="media-body">
-      <medium style="color:Dodgerblue;"><i>水彩+墙绘+板绘+手绘？？？</i></medium>
-        <p>小学毕业那会，就用美术特长生考去了十九中，顺理成章的进了美术社团（嘿嘿）。
-        在美术社团主要练习的还是素描和水粉，也画了墙绘，还尝试了一点点水彩。<br>
-        水彩可能是以点点失败而告终。那会是初一暑假，和同学，学姐还有老师去海淀区的一个大山里，算是集训？就用水彩画吧，画风景啊，飞机啊啥的。掌握不好水加多少，画的也一般。
-        后来回家后自己在家慢慢琢磨然后画，才好了那么一点点。<br>
-        在十九画井盖和画墙都是全新的尝试，同样的磨人却又有趣！画一块墙从清理墙面到留下自己的大名要花一天的时间。
-        清理墙面，铺底色，画主体，画整体，扣细节，最后签名，完成！画完了以后顶顶骄傲和自豪。高一的时候也回去和同学一起画墙来着！主题是中国戏剧，画了一个大美女。<br>
-        还学了一点电脑美术，画了一个皮影制作人和皮影对话的场景的作品，但是很丑所以不放了！（插叙请注意--）等到高中自己买了板子，开始有一些简单的练习。当宣传委员还被安排画海报：）<br>
-
-        上高中因为美术课尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。等到我高三申请完，一定会学国画的！<br>
-        说起画画我就有奇怪的买买买特质，买不齐画具就不想画画（说白了好矫情）。家里啥书都有，啥画具也都有，就是学的一般。尤其是马克笔：使用马克笔-->原地爆炸。<br>
-        时不时自己画点小画:) 看到喜欢的动漫人物，照着画两下。有的时候想刷一下存在感，证明一下自己不只是会画素描和水粉，就画一个新春贺图发给好友：）</p><br>
+          上高中因为美术课尝试了一点点国画，虽然不是很擅长，算是个想继续的体验。等到我高三申请完，一定会学国画的！<br>
+          说起画画我就有奇怪的买买买特质，买不齐画具就不想画画（说白了好矫情）。家里啥书都有，啥画具也都有，就是学的一般。尤其是马克笔：使用马克笔-->原地爆炸。<br>
+          时不时自己画点小画:) 看到喜欢的动漫人物，照着画两下。有的时候想刷一下存在感，证明一下自己不只是会画素描和水粉，就画一个新春贺图发给好友：）</p><br>
+      </div>
     </div>
   </div>
 
