--- a/photo.html
+++ b/photo.html
@@ -52,21 +52,111 @@
 
 
   <h2 align="center">记录生活——不到入门级摄影</h2>
+  <div class="container">
    <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p><br>
      <h3 style="color:Dodgerblue;">-云-</h3>
-      <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。<br>
-      <img src="照片\云1.jpg" height="312" width="312"><br>
-      <img src="照片\云2.jpg" height="312" width="312"><br>
-      <img src="照片\云3.jpg" height="211" width="375"><br>
-      <img src="照片\云4.jpg" height="312" width="312"><br>
-      <img src="照片\云5.jpg" height="312" width="416"><br>
-      <img src="照片\云6.jpg" height="306" width="512"><br>
-      <img src="照片\云7.jpg" height="312" width="416"><br>
-      <img src="照片\云8.jpg" height="312" width="416"><br>
-      <img src="照片\云9.jpg" height="312" width="416"><br>
-      <img src="照片\云10.jpg" height="312" width="312"><br>
-      <img src="照片\云11.jpg" height="312" width="416"><br>
-      <img src="照片\云12.jpg" height="312" width="416"></p><br>
+      <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。</p>
+
+      <div id="carouselExampleControls" class="carousel slide mr-5" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="7"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="8"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="9"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="10"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="12"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="background:url(a.jpg); background-size:cover">
+            <img src="照片\云1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>云</small>
+            </div>
+          </div>
+          <div class="carousel-item" style="background:url(a.jpg); background-size:cover;">
+            <img src="照片\云2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>阿格里巴</small>
+            </div>
+          </div>
+          <div class="carousel-item" style="background:url(a.jpg); background-size:cover;">
+            <img src="照片\云3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>伏尔泰</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云4.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>青年男子</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云5.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>青年男子</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云6.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>中年男子</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云7.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云8.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云9.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云10.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云11.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云12.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <small>老太太</small>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </div>
+
 
      <h3 style="color:Dodgerblue;">-花-</h3>
       <p>花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
