--- a/photo.html
+++ b/photo.html
@@ -73,19 +73,19 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="12"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active" style="background:url(a.jpg); background-size:cover">
+          <div class="carousel-item active">
             <img src="照片\云1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <small>云</small>
             </div>
           </div>
-          <div class="carousel-item" style="background:url(a.jpg); background-size:cover;">
+          <div class="carousel-item">
             <img src="照片\云2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <small>阿格里巴</small>
             </div>
           </div>
-          <div class="carousel-item" style="background:url(a.jpg); background-size:cover;">
+          <div class="carousel-item">
             <img src="照片\云3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <small>伏尔泰</small>
