change about format

--- a/photo.html
+++ b/photo.html
@@ -56,8 +56,8 @@
    <p>真的算一个不到入门级的小白，平常看到好看的景色就喜欢拿着手机或者相机拍下来.</p><br>
      <h3 style="color:Dodgerblue;">-云-</h3>
       <p>每个好看的风景都是老天赏脸（嘻嘻）。大部分的拍摄地点要么在公交车上，要么在去车站的路上。</p>
-
-      <div id="carouselExampleControls" class="carousel slide mr-5" data-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide mx-auto" data-ride="carousel">
+      <!--mx-auto是x轴两边空格一致-->
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -74,76 +74,40 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="照片\云1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>云</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="照片\云2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>阿格里巴</small>
-            </div>
-          </div>
-          <div class="carousel-item">
             <img src="照片\云3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>伏尔泰</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="照片\云4.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>青年男子</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="照片\云5.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>青年男子</small>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="照片\云6.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>中年男子</small>
-            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云5.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="照片\云7.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="照片\云8.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="照片\云9.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="照片\云10.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="照片\云11.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="照片\云12.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <small>老太太</small>
-            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云4.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\云10.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -155,8 +119,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-  </div>
-
+  <br>
 
      <h3 style="color:Dodgerblue;">-花-</h3>
       <p>花就很杂了，啥都有。八一大花园的杏花，桃花；我妈养的有水仙，石竹；最后还有乱入的丝瓜花...<br>
@@ -169,7 +132,8 @@
       <img src="照片\花3.jpg" height="416" width="312"><br>
       <img src="照片\花7.jpg" height="312" width="416"><br>
       <img src="照片\花6.jpg" height="312" width="416"><br>
-      <img src="照片\花8.jpg" height="312" width="416"></p><br>
+      <img src="照片\花8.jpg" height="312" width="416"></p>
+    <br>
 
      <h3 style="color:Dodgerblue;">-足球-</h3>
       <p>足球的照片是上学年拍的，自我感觉良好（赞），还没有很多拍动态人物的经验，继续加油！<br>
@@ -239,6 +203,7 @@
       <img src="照片\杂15.jpg" height="312" width="312"><br>
       <img src="照片\杂16.jpg" height="312" width="312"><br>
    </p>
+ </div>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
