--- a/volunteer.html
+++ b/volunteer.html
@@ -52,6 +52,7 @@
   <br>
 
   <h2 align="center">星点贡献——我的志愿时光</h2>
+  <div class="container">
    <p>志愿是从高一开始的。社团招新的那会，有个点儿围了一圈人扫二维码，然后我也扫了，就进了那个微信群。<br>
      第一个志愿活动在高一的九月份，是一个宣传急救知识的志愿活动，没什么人报名，我抱着试试看的心情就去了。然后去了就挺尴尬了，就不认识的仨学长和我。
      但是活动本身还是挺好的。先会有专业人士教我们急救，然后我们再向大众传授白金十分钟和急救的知识。 由于地点在宋庆龄青少年文化交流中心，
@@ -87,6 +88,7 @@
        <source src="照片\the nonthreatening ghost.mp3" type="audio/mpeg">
       </audio>
    </p>
+ </div>
   <hr />
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
