--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）<br>
         身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
         生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
-        搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p><br>
+        搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
     </div>
   </div>
 </div>
@@ -82,7 +82,6 @@
         转到小小动力——我的爱好
       </a>
       一定要加#这个键啊！不然就错了！-->
-  </p>
   <hr />
 
 
