--- a/ruber.html
+++ b/ruber.html
@@ -50,19 +50,59 @@
 
 
   <h2 align="center">小小动力——我的爱好</h2>
+  <div class="container">
     <br>
     <h3 style="color:Dodgerblue;">橡皮章</h3>
     <p>
       刻橡皮章是从初一开始的。初中设了有选修课，我就迷迷糊糊选了一点都不了解的橡皮章。第一个章子是熊猫，应该是史上最丑，没有之一，看起来毫无天赋，但还是能看得过去。
       回家后就买了一个新手套装（警告：别买），一般般难用。跟着老师刻了一整年，自己初一闲的琢磨琢磨，算是小有成就。有的时候同学还让我帮他们刻呢。初二就是自己的霍霍时光。
       上课听听讲，下课刻刻章，满世界都是橡皮渣滓。初三的时候因为中考，放下了一年。等一考完，立马就捡起来了。我可以算是一个章娘了！<br>
-      图案有很多，可以刻喜爱的动漫人物，或者就是简单的猫猫狗狗或者植物，还能当做装饰。<br>
-        人生中的第一个章子，是不是很丑哈哈哈。<br>
-        <img src="照片\人生中的第一个章子.jpg" alt="人生中的第一个章子" height="416" width="312"><br>
-        <img src="照片\安东尼的兔子.jpg" alt="安东尼的兔子" height="312" width="416"><br>
-        <img src="照片\黑子的篮球.jpg" alt="黑子的篮球" height="416" width="312"><br>
-        <img src="照片\saber.jpg" alt="saber" height="416" width="312"><br>
+      图案有很多，可以刻喜爱的动漫人物，或者就是简单的猫猫狗狗或者植物，还能当做装饰。</p>
+
+      <div id="carouselExampleControls" class="carousel slide mx-auto" data-ride="carousel">
+      <!--mx-auto是x轴两边空格一致-->
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="照片\人生中的第一个章子.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\安东尼的兔子.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\猫猫.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\小人头.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\月亮.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\黑子的篮球.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="照片\saber.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+      <p>
         最近越发喜欢那种可爱精巧的小章子了！什么皮卡丘啊，小面包啊都好可爱。<br>
+        这个皮卡丘用的是套色，声明：我是一个套色渣渣~主要是因为我每次都对不准色块和线条的位置（哭了）<br>
         <img src="照片\皮卡丘.jpg" alt="皮卡丘" height="312" width="416"><br>
         <img src="照片\早餐包.jpg" alt="早餐包" height="312" width="416"><br>
         <img src="照片\傻猫.jpg" alt="傻猫" height="416" width="312"><br>
@@ -76,11 +116,12 @@
         <img src="照片\人狠.jpg" alt="字" height="312" width="312"><br>
       刻橡皮章算是我的最放松的方式。可以放空自己的脑袋，累的时候什么也不想，想不明白事情的时候也可以什么都想。四年攒下来已经有三四盒章子了。
       上了高中带了艺术社，时不时的带着社员刻章子。大部分的章子刻完以后会印到卡纸上当做明信片或者书签，还有的会当做贺卡送给老师和同学。<br>
-        <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
         <img src="照片\书签1.jpg" alt="书签" height="312" width="312">
         <img src="照片\书签2.jpg" alt="书签" height="312" width="312">
         <img src="照片\书签3.jpg" alt="书签" height="312" width="312">
+        <img src="照片\圣诞节.jpg" alt="贺卡" height="219" width="288">
     </p>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
