--- a/photo.html
+++ b/photo.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="volunteer.html" target="_top">志愿</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">尾声</a>
+            <a class="nav-link" href="ending.html">尾声</a>
           </li>
         </ul>
       </div>
@@ -147,18 +147,18 @@
      <h3 style="color:Dodgerblue;">-故宫-</h3>
       <p>好久之前去的故宫啦，最喜欢第二张和第六张，有那种“一入宫门深似海”的感觉。<br>
       <img src="照片\故宫1.jpg" height="312" width="312"><br>
-      <img src="照片\故宫2.jpg" height="416" width="312"><br>
-      <img src="照片\故宫3.jpg" height="312" width="416"><br>
       <img src="照片\故宫5.jpg" height="312" width="312"><br>
       <img src="照片\故宫4.jpg" height="312" width="312"><br>
-      <img src="照片\故宫6.jpg" height="416" width="312"></p><br>
+      <img src="照片\故宫2.jpg" height="416" width="312"><br>
+      <img src="照片\故宫6.jpg" height="416" width="312"><br>
+      <img src="照片\故宫3.jpg" height="312" width="416"></p><br>
 
      <h3 style="color:Dodgerblue;">-川渝之旅-</h3>
       <p>是去游学，游学在我身上有奇怪的定律，最开始明明有人跟我一起逛，每每到最后，都只是我独自在景区溜达。喜欢老街那种热闹又掩不住悲凉。<br>
       <img src="照片\成1.jpg" height="312" width="312"><br>
       <img src="照片\成2.jpg" height="312" width="312"><br>
-      <img src="照片\成3.jpg" height="416" width="312"><br>
       <img src="照片\成4.jpg" height="312" width="312"><br>
+      <img src="照片\成3.jpg" height="416" width="312"><br>
       止不住的多拍两张红配绿~<br>
       <img src="照片\成5.jpg" height="312" width="416"><br>
       <img src="照片\成6.jpg" height="312" width="416"><br>
