--- a/volunteer.html
+++ b/volunteer.html
@@ -41,15 +41,13 @@
             <a class="nav-link" href="volunteer.html" target="_top">志愿</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">尾声</a>
+            <a class="nav-link" href="ending.html">尾声</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <br>
-  <br>
-  <br>
+  <br><br><br>
 
   <h2 align="center">星点贡献——我的志愿时光</h2>
   <div class="container">
@@ -58,7 +56,7 @@
      但是活动本身还是挺好的。先会有专业人士教我们急救，然后我们再向大众传授白金十分钟和急救的知识。 由于地点在宋庆龄青少年文化交流中心，
      周围来来往往的都是上完课外班的小孩子们。挺锻炼自己的传授能力和亲和度的。忙忙叨叨一下午觉得教别人知识蛮自豪！<br>
      <img src="照片\急救1.jpg" alt="传授急救知识" height="320" width="425"><br>
-     <img src="照片\急救2.jpg" alt="传授急救知识" height="320" width="425"><br>
+     <img src="照片\急救2.jpg" alt="传授急救知识" height="320" width="425"><br><br>
        后来前前后后做了一些零散的志愿活动，就比如说，和同学去康辉老年公寓唱《当你老了》，去了海伦聋儿康复园教小孩子折纸。做这些活动的间隔，
        因为我是国际部的要找规划，总有规划问我，你的志愿活动给他们改变了什么，这个问题简单来说，没什么，没改变什么。又或者，改变了一点，一点表层的东西。
        曾经很痛恨自己看到一些很痛心的，很想伸出援手的情况却帮不了什么大忙，并不能从根本上改变这些问题。但后来想了想，改变一点总是改变了，
@@ -68,19 +66,19 @@
         <source src="照片\敬老院2.mp4" type="video/mp4">
       </video><br>
       <img src="照片\海伦1.jpg" alt="青蛙" height="320" width="320"><br>
-      <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br>
+      <img src="照片\海伦2.jpg" alt="教折纸" height="320" width="320"><br><br>
       到太阳村了，太阳村是重头戏。这是第一次真正意义上的体验生活。我们去太阳村没支教，去搬化肥来着。为啥叫体验生活呢，这个化肥是麻袋装的，
       一卡车拉来的，50公斤的，大概有200袋不到：）真的搬得时候嘴上笑嘻嘻，心里mmp。我这辈子都没搬过这么多这么沉的东西，搬完之后觉得自己不是女的。<br>
       关于太阳村的起源，那就有得说了。有关太阳村起源和妈妈咪呀的宣传。这里的孩子都是服刑人员的子女或者是被拐卖然后救下的孩子。
       太阳村是西安的一名叫张淑琴的女警官创办的，创办的目的就是让这些无辜的孩子有安身之所。北京的这个太阳村经济来源是后面的养殖场，还有草莓地。
       大一点的孩子们（其实看着挺小），就会去帮着大人种草莓。衣食住行的资金，大部分还是靠捐助，小部分靠卖草莓。但是我没咋看出来捐助很多，虽然有一面墙
-      贴满了各方捐助的表彰，说实在的，（不知道流进了谁的腰包，我看着老师穿的挺好）<br>
+      贴满了各方捐助的表彰，说实在的，（不知道流进了谁的腰包，我看着老师穿的挺好，应该都get到我什么意思）<br>
       有三个男孩跟我们一起搬肥料，后来得知跟他们都已经上初中了! 我很惊讶，真的，他们力气很大，很惊讶的是他们会开那个长得跟三蹦子一样的四个轮子的电动小车（不知道叫啥）。
       我搬了一天的肥料手已经很粗糙了，可以想象到他们的手有多粗糙，没有手套，日复一日各种农活。而且腰肩膀胳膊酸到爆炸！<br>
       看那白色伟岸的背影：）<br>
       <img src="照片\太阳村1.jpg" alt="太阳村" height="320" width="425"><br>
       <img src="照片\太阳村2.jpg" alt="太阳村" height="320" width="425"><br>
-      <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br>
+      <img src="照片\太阳村3.jpg" alt="太阳村" height="320" width="425"><br><br>
       后面的志愿就很零散啦，去一个网络文学大会做志愿者，扫扫二维码进场馆。站累了还能去逛一逛，也不知道这种混志愿北京时长的志愿活动做了有啥意义。<br>
       最近做的是一个给山区孩子录音读英文绘本的活动，读好了以后放到公众号上。我这么卡卡卡雷厉风行的人，就及其锻炼自己的轻柔能力，可不能把睡前故事读的
       像要上战场。<br>
@@ -89,7 +87,7 @@
       </audio>
    </p>
  </div>
-  <hr />
+ <br><br><br>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
