--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="volunteer.html" target="_top">志愿</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">尾声</a>
+            <a class="nav-link" href="ending.html">尾声</a>
           </li>
         </ul>
       </div>
@@ -54,26 +54,27 @@
   </nav><br><br><br>
 
 
-  <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
-  <div class="container">
-  <div class="media">
-    <div class="media-left media-middle">
-      <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
-      <p>照片,em,放错了<br>
-      <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
-      照骗(微笑)</p><br>
+    <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
+    <div class="container">
+     <div class="media">
+      <div class="media-left media-middle">
+        <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
+        <p>照片,em,放错了<br>
+        <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
+        照骗(微笑)</p><br>
+      </div>
+      <div class="media-body">
+        <h2>Acai的自我介绍</h2>
+        <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
+          是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
+          可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）<br>
+          身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
+          生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
+          搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
+      </div>
+     </div>
     </div>
-    <div class="media-body">
-      <h2>Acai的自我介绍</h2>
-      <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
-        是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
-        可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）<br>
-        身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
-        生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
-        搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
-    </div>
-  </div>
-</div>
+    <br><br><br><br><br><br>
 
 
     <!--<div id="目录">
@@ -82,17 +83,6 @@
         转到小小动力——我的爱好
       </a>
       一定要加#这个键啊！不然就错了！-->
-  <hr />
-
-
-  <h2 style="color:navy;">写在后面的话</h2>
-   <p style="background-color:rgba(255,255,0,0.25)">如果能读到这里，那说明这位网页的浏览者肯定是一个很有耐心的人了！感谢每一位能读完的可爱人呀！
-     读完了的话，就大概了解表层的我了吧。Acai肯定不如表面的那么好，但不停争取着，想和大家一样
-     成为一个更好的好人。<br>
-     希望大家平安喜乐，万事胜意。<br>
-     那么，就到这里吧，有缘自会相见~
-   </p>
-   <div><textarea>有什么建议都可以写在这里哦~</textarea></div><br>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
