--- a/pipa.html
+++ b/pipa.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="volunteer.html" target="_top">志愿</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">尾声</a>
+            <a class="nav-link" href="ending.html">尾声</a>
           </li>
         </ul>
       </div>
