change the format of the home page

--- a/index.html
+++ b/index.html
@@ -56,23 +56,32 @@
 
     <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
     <div class="container">
-     <div class="media">
-      <div class="media-left media-middle">
-        <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
-        <p>照片,em,放错了<br>
-        <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
-        照骗(微笑)</p><br>
-      </div>
-      <div class="media-body">
-        <h2>Acai的自我介绍</h2>
-        <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
-          是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
-          可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）<br>
-          身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
-          生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
-          搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
-      </div>
-     </div>
+       <div class="media">
+        <div class="media-left media-middle">
+          <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
+          <p>照片,em,放错了</p>
+        </div>
+        <div class="media-body">
+          <h2>Acai的自我介绍</h2>
+          <br>
+          <p>我叫蔡依珊。在北京市八一学校国际部就读高二。初中是隔壁的十九中。<br>
+            是一个简(直)简（来）单（直）单（去），简单粗暴，不会化妆，（真的）胖胖的女生。<br>
+            可能是祖传的爱操心，熟悉的人会叫我珊妈。昵称的由来是，初三操碎的闲心：）</p>
+        </div>
+       </div>
+
+       <div class="media">
+         <div class="media-body mr-5">
+           <br><br>
+           <p>身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
+           生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
+           搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
+         </div>
+         <div class="media-right">
+           <img src="照片\自拍.jpg" class="media-object" height="320" width="425"><br>
+           <p>照骗(微笑)</p>
+         </div>
+       </div>
     </div>
     <br><br><br><br><br><br>
 
