change the media into grid system

--- a/ending.html
+++ b/ending.html
@@ -56,17 +56,18 @@
   <h2 style="color:navy;">写在后面的话</h2>
   <br>
   <div class="container">
-    <div class="media">
-        <div id="carouselExampleControls" class="carousel slide mr-5 mt-5" data-ride="carousel">
+    <div class="row">
+      <div class="col-sm-7 col-md-6 col-lg-5">
+        <div id="carouselEnd" class="carousel slide mr-5 mt-5" data-ride="carousel">
           <!--margin right-numver-->
             <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
+              <li data-target="#carouselEnd" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselEnd" data-slide-to="1"></li>
+              <li data-target="#carouselEnd" data-slide-to="2"></li>
+              <li data-target="#carouselEnd" data-slide-to="3"></li>
+              <li data-target="#carouselEnd" data-slide-to="4"></li>
+              <li data-target="#carouselEnd" data-slide-to="5"></li>
+              <li data-target="#carouselEnd" data-slide-to="6"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -91,19 +92,21 @@
                 <img src="照片\07.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carouselEnd" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carouselEnd" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <div class="media-body">
+        </div>
+
+         <div class="col-sm-5 col-md-6 col-lg-7">
            <p style="background-color:rgba(255,255,0,0.25)">如果能读到这里，那说明这位网页的浏览者肯定是一个很有耐心的人了！感谢每一位能读完的可爱人呀！这里的内容不多但也不少，足够了解一小部分的我了！<br><br>
              那，在尾声还是聊一聊我自己，关于其他方面的我。在学业方面的话，acai不是很偏科，但确实有不好的科目：物理。物理可以算是我的“天敌”了吧，这个令我又爱又恨的学科，哎。熬夜最多的科目，却是考的分数最少的科目。
-             只怪自己没有天赋，或者让外教平淡而没有起伏的声音背上黑锅（嘿嘿）<br>
+             只怪自己没有天赋，或许可以让外教平淡而没有起伏的声音背黑锅（嘿嘿）<br>
              学习的话，acai不是个大学霸，但也不是个小学渣。要是非得评出个最喜欢的科目，那可能就是地理了。喜欢地理从初一开始，那时候的地理老师，
              我觉得，讲的好极了哈哈。他教我们用一些简单的线条去记山川河流。不像一些老师一本正经的读课本，他很少读课本，大部分的时候，都在用脑内的知识结合自己的见解教我们。师父领进门修行在个人，后来的acai也学习了不仅是课本上的地理。
              前前后后，算上这次的CAN Borneo，一共三个跟地理相关的项目了。越了解，越欢喜它是一门多么有趣的学科~
@@ -120,7 +123,7 @@
            </p>
            <br><br>
            <textarea>有什么建议都可以写在这里哦~</textarea>
-         </div>
+        </div>
     </div>
   </div>
    <br><br><br><br><br><br>
