--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 style="font-size:32px;">欢迎来到<br>Acai<br>的空间</h1><br>
     <div class="container">
        <div class="media">
-        <div class="media-left media-middle">
+        <div class="media-left mr-5 mt-3">
           <img src="照片\照片.jpg" class="media-object" height="320" width="320"><br>
           <p>照片,em,放错了</p>
         </div>
