--- a/pipa.html
+++ b/pipa.html
@@ -52,35 +52,30 @@
 
   <h2 align="center">小小动力——我的爱好</h2>
   <br>
+  <h3 style="color:Dodgerblue;">弹琵琶</h3>
   <div class="container">
-    <div class="media">
-      <div class="media-body mr-5">
-        <h3 style="color:Dodgerblue;">弹琵琶</h3>
+    <div class="row">
+      <div class="col-sm-7 col-md-6 col-lg-6">
+         <div class="container-fluid">
+          <video class="img-responsive" controls>
+            <source src="照片\第一次登台演出.mp4" type="video/mp4">
+          </video>
+          <iframe class="img-responsive" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe><br><br>
+          <img class="img-responsive" src="照片\二十届艺术展演.jpg" alt="演出照"><br>
+          <img class="img-responsive" src="照片\二十届艺术展演 近.jpg" alt="演出照"><br>
+          <img class="img-responsive" src="照片\琵琶声部2.jpg" alt="弹拨声部"><br><br>
+          <img class="img-responsive" src="照片\琵琶声部.jpg" alt="弹拨声部"><br><br>
+          <img class="img-responsive" src="照片\憨憨合照.jpg" alt="我和同学的合影" ><br><br>
+          <img class="img-responsive" src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出"><br><br>
+          <img class="img-responsive" src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出">
+        </div>
+      </div>
+
+      <div class="col-sm-5 col-md-6 col-lg-6">
         <p>
           是小学二年级开始学的琵琶。据我妈说，说我看电视上人家大姐姐穿旗袍弹琵琶好看所以才想学琴。这是什么神奇的理由，反正现在胖胖的acai也穿不了hhh。<br><br>
           这是第一次上台演出的视频，高糊，听个声儿！猜猜哪个是我~
         </p>
-      </div>
-      <div class="media-right">
-        <video height="288" width="384" controls>
-          <source src="照片\第一次登台演出.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
-    <br><br>
-
-    <div class="media">
-      <div class="media-left  mr-5">
-        <iframe height=280 width=400 src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe><br><br>
-        <img src="照片\二十届艺术展演.jpg" alt="演出照" height="345" width="518"><br><br>
-        <img src="照片\二十届艺术展演 近.jpg" alt="演出照" height="345" width="518"><br><br>
-        <img src="照片\琵琶声部2.jpg" alt="弹拨声部" height="345" width="518"><br><br>
-        <img src="照片\琵琶声部.jpg" alt="弹拨声部" height="272" width="412"><br><br>
-        <img src="照片\憨憨合照.jpg" alt="我和同学的合影" height="432" width="324"><br><br>
-        <img src="照片\三十九中交流演出.jpg" alt="与青岛三十九中交流演出" height="288" width="384"><br><br>
-        <img src="照片\三十九中交流合照.jpg" alt="与青岛三十九中交流演出" height="280" width="400">
-      </div>
-      <div class="media-body">
         <p>
           上初中后，就去了我们初中的乐团。在北京市第十九中学金帆民乐团的一年多的时间是我最难忘的经之一。其实初一的时候就找过乐团的老师了，但那会不想去。初二的时候还是进去了，最开始很陌生。
           两个高中的学姐，两个同年级的女生，还有两个初一的学妹。
