change the format of the video

--- a/pipa.html
+++ b/pipa.html
@@ -91,7 +91,10 @@
          </p>
        </div>
        <div class="col-sm-7 col-md-6 col-lg-5">
-            <iframe class="img-responsive" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe><br><br>
+         <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src='https://player.youku.com/embed/XNDYyNTQ4MjQ5Ng==' frameborder=0 'allowfullscreen'></iframe>
+          </div>
+            <br><br>
             <img class="img-responsive" src="照片\二十届艺术展演.jpg" alt="演出照"><br><br>
             <img class="img-responsive" src="照片\二十届艺术展演 近.jpg" alt="演出照"><br><br>
             <img class="img-responsive" src="照片\琵琶声部2.jpg" alt="弹拨声部"><br><br>
