--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
            搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
          </div>
          <div class="col-sm-7 col-md-6 col-lg-5 mt-4">
-             <img class="img-responsive" src="照片\自拍.jpg"><br>
+             <img class="img-responsive" src="照片\自拍1.jpg"><br>
              <p>照骗(微笑)</p>
          </div>
        </div>
