--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
            <br><br>
            <p>身高1米7整，体重emm胖就对了。从初二下好像就没长过个了，体重倒是呈指数增长。<br>
            生日是万圣节前夜的那天。天蝎女。不信妖魔鬼怪，也无宗教信仰。牙不太好,但是爱吃橡皮糖和棒棒糖!<br>
-           搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。</p>
+           搭这个网站的目的可能就是让更多的人认识和了解我吧。我会在这里分享我自己的成长经历和各种学习经验。<br>
+           如果想要了解我，就继续读下去吧~</p>
          </div>
          <div class="col-sm-7 col-md-6 col-lg-5 mt-4">
              <img class="img-responsive" src="照片\自拍1.jpg"><br>
